style.css
.calculator-container {
    display: flex;
    flex-wrap: wrap;
    border: 1px solid black;
    height: 650px;
    width: 425px;
    margin: 75px auto;
    justify-content: center;
    padding: 25px;
    gap: 25px;
}

.display {
    border: 1px solid black;
    min-width: 400px;
    height: 100px;
    font-size: 75px;
    text-align: end;
    align-self: center;
    padding: 5px;
}

.buttons-container{
    display: flex;
    /* border: 1px solid green; */
    min-width: 400px;
    height: 475px;
}

.numbers-container{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    /* border: 1px solid black; */
    min-width: 300px;
}

.numbers-container button {
    flex: 1 0 30%; /* grow | shrink | basis */
    margin: 5px;
    max-width: 30%;
}

.operations-container{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
    /* border: 1px solid black; */
    min-width: 100px;
}

.operations-container button {
    flex: 1 0 auto; /* grow | shrink | basis */
    margin: 5px;
    height: 60px;
}

